umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@chemsketch_brenda_molfile_rgroup.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C27N7O18P3S
    atom_count: 56
    bond_count: 58
    property_count: 1
molecule_lenient:
  success: true
  summary:
    sum_formula: C27N7O18P3S
    atom_count: 56
    bond_count: 58
    property_count: 1
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C27N7O18P3S
    atom_count: 56
    bond_count: 58
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C27N7O18P3S
    atom_count: 56
    bond_count: 58
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
